<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rexx</string>
    <string name="madeby">Engineered by Jaxo, Inc.</string>
    <string name="copyright">© Jaxo, Inc. 2011&#8211;2014</string>
    <!-- see: http://www.100summits.com/full-summit-list -->
    <!-- name="versionname">Silverheels (#1) -->
    <!-- name="versionname">Hagerman Peak (#2) -->
    <!-- name="versionname">Horseshoe (#3) -->
    <!-- name="versionname">Emerald (#4) -->
    <string name="versionname">Emerald</string>
    <string name="forandroid">for Android&#8482; %1$s and up</string>
    <string name="Edition">%1$s Edition"</string>
    <string name="Ok">OK</string>
    <string name="RexxGallery">Rexx Scripts Gallery</string>
    <string name="NewScript">New script</string>
    <string name="RunScript">Run this script</string>
    <string name="Run">Run</string>
    <string name="EditScript">Edit this script</string>
    <string name="DeleteScript">Remove this script</string>
    <string name="ScriptEditor">Rexx Script Editor</string>
    <string name="RexxInterpreter">Rexx Interpreter</string>
    <string name="Title">[Title]</string>
    <string name="ScriptBody">[Body of the Rexx Script]</string>
    <string name="Done">Quit</string>
    <string name="Import">Import</string>
    <string name="Info">Info</string>
    <string name="Save">Save</string>
    <string name="SaveAs">Save\nCopy</string>
    <string name="Revert">Revert</string>
    <string name="RexxException">Unexpected error has occurred"</string>
    <string name="RexxError">Error %1$d found"</string>
    <string name="SaveChanges">Changes have been made.\nAre you sure to quit?"</string>
    <string name="ReallyQuit">Yes, quit anyway</string>
    <string name="CancelQuit">No, don\'t quit!</string>
    <string name="OnItemClicked">Item clicked action&#8230;</string>
    <string name="FileType">type</string>
    <string name="OnItemClickedSummary">When an item is clicked in the Scripts Gallery, interpret the script, if it is valid.  To rather edit it, use long press.</string>
    <string name="ImportFile">Import this file into Rexx Galery?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="FontSize">Font size</string>
    <string name="FontSizeSummary">Change the font size (presently: %s)</string>
    <!--
    <string name="ParseRexxml">Enable REXXML</string>
    <string name="ParseRexxmlSummary">When REXXML tags are found in \"Say\" clauses, parse and act upon.</string>
    -->
    <string name="Preferences">Preferences</string>
    <string name="NotDirectory">\"%1$s\" is not a directory</string>
    <string name="EmptyDirectory">Directory \"%1$s\" is empty</string>
</resources>
