<?xml version="1.0" encoding="utf-8"?>
<!--
   $Id: script_editor.xml,v 1.3 2012-04-07 14:37:15 pgr Exp $

  (C) Copyright 2011 Jaxo Inc.  All rights reserved.
  This work contains confidential trade secrets of Jaxo.
  Use, examination, copying, transfer and disclosure to others
  are prohibited, except with the express written agreement of Jaxo.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#919191"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingTop="0dp" >

        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Title"
            android:maxLines="1"
            android:textSize="12sp" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp" >

            <EditText
                android:id="@+id/body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/ScriptBody"
                android:inputType="textMultiLine"
                android:minLines="10"
                android:scrollHorizontally="true"
                android:scrollbars="vertical|horizontal"
                android:textSize="12sp" />
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="2dip"
        android:layout_height="fill_parent"
        android:layout_marginLeft="2dip"
        android:background="@drawable/divider_vertical_holo_dark"
        android:gravity="right" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <Button
            android:id="@+id/done"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Done" />

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Save" />

        <Button
            android:id="@+id/saveAs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SaveAs" />

        <Button
            android:id="@+id/revert"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Revert" />

        <Button
            android:id="@+id/run"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Run" />
    </LinearLayout>

</LinearLayout>